--- a/resources/css/web/app.css
+++ b/resources/css/web/app.css
@@ -1,3 +1,5 @@
+@import "typo/webfonts.css";
+@config "../../../tailwind.web.config.js";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
