--- a/resources/css/web/app.css
+++ b/resources/css/web/app.css
@@ -1,5 +1,6 @@
 @import "typo/webfonts.css";
 @import "layout/base.css";
+@import "components/iso.css";
 @import "vendor/nprogress.css";
 
 @config "../../../tailwind.web.config.js";
